@@ -1,7 +1,6 @@
 package market.api.delivery.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
@@ -22,15 +21,14 @@ public class DeliveryService {
   private final ModelMapper model;
   
   public List<DeliveryRES> getOrder(Integer orderId) {
-    List<Delivery> entityList = repository.findByOrderId(orderId).get();
-    List<DeliveryRES> resList = entityList.stream()
+    List<Delivery> entityList = repository.findByOrderId(orderId).orElseThrow();
+    return entityList.stream()
         .map(item -> {
           DeliveryRES res = DeliveryRES.create(item);
           res.setOrderItem(model.map(item.getOrderItem(), OrderItemRES.class));
           return res;
         })
-        .collect(Collectors.toList());
-    return resList;
+        .toList();
   }
   
 }
